WIP: Switch to PropertiesTermInfoStore
// FIXME: integrate with previous patch?

JIRA: CONTROLLER-2133
Change-Id: I74e5e47fcfae8760d120254a6891d95dc0795b64
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>